# POS_Semestalka

./: CMakeLists.txt  client.c  game_logic.c  game_logic.h  server.c
Client/: client.c  client.h
Game_logic/: game_logic.c  game_logic.h
Server/: server.c  server.h
